--- a/index.html
+++ b/index.html
@@ -7,37 +7,47 @@
     <title>Sign Up Form</title>
 </head>
 <body>
-   <div class="container">
+   <div class="outer-wrapper">
        <img id="bg-img" src="sign-up-form-bg.jpg" alt="A blurry image of some flowers">
-        <form id="main-form" action="#" method="get">
-            <div class="main-input-container">
-               <div class="input-container">
-                    <label for="first-name">First Name</label>
-                    <input id="first-name" name="first-name" type="text">
-               </div> 
-                <div class="input-container">
-                    <label for="last-name">Last Name</label>
-                    <input id="last-name" name="last-name" type="text">
+            <div class="right-wrapper">
+                <div class="cta-wrapper">
+                    <h2 id="cta">Sign up for an adventure ... you know your want to!</h2>
                 </div>
-                <div class="input-container">
-                    <label for="user-email">Email</label>
-                    <input id="user-email" name="user-email" type="email">
-                </div>
-                <div class="input-container">
-                    <label for="user-phone-no">Phone number</label>
-                    <input id="user-phone-no" name="user-phone-no" type="tel">
-                </div>
-                <div class="input-container">
-                    <label for="user-pass">Password</label>
-                    <input id="user-pass" name="user-pass" type="password">
-                </div>
-                <div class="input-container">
-                    <label for="user-pass-confirm">Confirm Password</label>
-                    <input id="user-pass-confirm" name="user-pass-confirm" type="password"> 
-                </div>
-                <button type="button">Submit!</button>
+                <div class="form-wrapper">
+                <form id="main-form" action="#" method="get">
+                    <div class="main-input-container">
+                        <div class="input-container">
+                            <label for="first-name">First Name</label>
+                            <input id="first-name" name="first-name" type="text">
+                        </div> 
+                        <div class="input-container">
+                            <label for="last-name">Last Name</label>
+                            <input id="last-name" name="last-name" type="text">
+                        </div>
+                        <div class="input-container">
+                            <label for="user-email">Email</label>
+                            <input id="user-email" name="user-email" type="email">
+                        </div>
+                        <div class="input-container">
+                            <label for="user-phone-no">Phone number</label>
+                            <input id="user-phone-no" name="user-phone-no" type="tel">
+                        </div>
+                        <div class="input-container">
+                            <label for="user-pass">Password</label>
+                            <input id="user-pass" name="user-pass" type="password">
+                        </div>
+                        <div class="input-container">
+                            <label for="user-pass-confirm">Confirm Password</label>
+                            <input id="user-pass-confirm" name="user-pass-confirm" type="password"> 
+                        </div>
+                    </div>
+                </form>
             </div>
-        </form>
+            <div class="login-wrapper">
+                <button id="create-account-btn" type="button">Create Account</button>
+                <p>Already have an account? <a href="#">Log in</a></p>
+            </div>
+        </div>
    </div> 
 </body>
 </html>
