Feat: page title, colorscheme

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
    <div class="outer-wrapper">
-       <img id="bg-img" src="sign-up-form-bg.jpg" alt="A blurry image of some flowers">
+        <div id="bg-img-wrapper">
+            <img id="bg-img" src="sign-up-form-bg.jpg" alt="A blurry image of some flowers">
+        </div>
             <div class="right-wrapper">
                 <div class="cta-wrapper">
-                    <h2 id="cta">Sign up for an adventure ... you know your want to!</h2>
+                    <h2 id="cta">Sign up for an adventure ...<br> you know your want to!</h2>
                 </div>
                 <div class="form-wrapper">
                 <form id="main-form" action="#" method="get">
+                    <legend id="motivator">Lets do this!</legend>
                     <div class="main-input-container">
                         <div class="input-container">
                             <label for="first-name">First Name</label>
