--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Ysabeau+Office:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Sign Up Form</title>
 </head>
@@ -21,15 +24,18 @@
                     <div class="main-input-container">
                         <div class="input-container">
                             <label for="first-name">First Name</label>
-                            <input id="first-name" name="first-name" type="text">
+                            <input id="first-name" name="first-name" type="text"
+                            autocomplete="given-name">
                         </div> 
                         <div class="input-container">
                             <label for="last-name">Last Name</label>
-                            <input id="last-name" name="last-name" type="text">
+                            <input id="last-name" name="last-name" type="text"
+                            autocomplete="family-name">
                         </div>
                         <div class="input-container">
                             <label for="user-email">Email</label>
-                            <input id="user-email" name="user-email" type="email" required>
+                            <input id="user-email" name="user-email" type="email" 
+                            autocomplete="email" required>
                         </div>
                         <div class="input-container">
                             <label for="user-phone-no">Phone number</label>
