--- a/index.html
+++ b/index.html
@@ -15,54 +15,57 @@
         <div id="bg-img-wrapper">
             <img id="bg-img" src="sign-up-form-bg.jpg" alt="A blurry image of some flowers">
         </div>
+        <div class="outer-right-wrapper">
+
             <div class="right-wrapper">
                 <div class="cta-wrapper">
                     <h2 id="cta">Begin your gardening adventure here...<br>and
                         watch it grow!</h2>
                 </div>
                 <div class="form-wrapper">
-                <form id="main-form" action="#" method="get">
-                    <legend id="motivator">Plant a seed!</legend>
-                    <div class="main-input-container">
-                        <div class="input-container">
-                            <label for="first-name">First Name</label>
-                            <input id="first-name" name="first-name" type="text"
-                            autocomplete="given-name">
-                        </div> 
-                        <div class="input-container">
-                            <label for="last-name">Last Name</label>
-                            <input id="last-name" name="last-name" type="text"
-                            autocomplete="family-name">
+                    <form id="main-form" action="#" method="get">
+                        <legend id="motivator">Plant a seed!</legend>
+                        <div class="main-input-container">
+                            <div class="input-container">
+                                <label for="first-name">First Name</label>
+                                <input id="first-name" name="first-name" type="text"
+                                autocomplete="given-name">
+                            </div> 
+                            <div class="input-container">
+                                <label for="last-name">Last Name</label>
+                                <input id="last-name" name="last-name" type="text"
+                                autocomplete="family-name">
+                            </div>
+                            <div class="input-container">
+                                <label for="user-email">Email</label>
+                                <input id="user-email" name="user-email" type="email" 
+                                autocomplete="email" required>
+                            </div>
+                            <div class="input-container">
+                                <label for="user-phone-no">Phone number</label>
+                                <input id="user-phone-no" name="user-phone-no" type="tel" autocomplete="tel">
+                            </div>
+                            <div class="input-container">
+                                <label for="user-pass">Password</label>
+                                <input id="user-pass" name="user-pass" type="password"
+                                title="Password must be between 8-40 characters"
+                                minlength="8" maxlength="40" required>
+                            </div>
+                            <div class="input-container">
+                                <label for="user-pass-confirm">Confirm Password</label>
+                                <input id="user-pass-confirm" name="user-pass-confirm" type="password"
+                                title="Password must be between 8-40 characters"
+                                minlength="8" maxlength="40" required> 
+                            </div>
                         </div>
-                        <div class="input-container">
-                            <label for="user-email">Email</label>
-                            <input id="user-email" name="user-email" type="email" 
-                            autocomplete="email" required>
-                        </div>
-                        <div class="input-container">
-                            <label for="user-phone-no">Phone number</label>
-                            <input id="user-phone-no" name="user-phone-no" type="tel" autocomplete="tel">
-                        </div>
-                        <div class="input-container">
-                            <label for="user-pass">Password</label>
-                            <input id="user-pass" name="user-pass" type="password"
-                            title="Password must be between 8-40 characters"
-                            minlength="8" maxlength="40" required>
-                        </div>
-                        <div class="input-container">
-                            <label for="user-pass-confirm">Confirm Password</label>
-                            <input id="user-pass-confirm" name="user-pass-confirm" type="password"
-                            title="Password must be between 8-40 characters"
-                            minlength="8" maxlength="40" required> 
-                        </div>
-                    </div>
-                    <div id="email-validation-display"></div>
-                    <div id="password-validation-display"></div>
-                </form>
-            </div>
-            <div class="login-wrapper">
-                <button id="create-account-btn" type="button">Create Account</button>
-                <p>Already have an account? <a href="#">Log in</a></p>
+                        <div id="email-validation-display"></div>
+                        <div id="password-validation-display"></div>
+                    </form>
+                </div>
+                <div class="login-wrapper">
+                    <button id="create-account-btn" type="button">Create Account</button>
+                    <p>Already have an account? <a href="#">Log in</a></p>
+                </div>
             </div>
         </div>
    </div> 
