--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <title>Sign Up Form</title>
 </head>
 <body>
+    <div class="modal-container">
+        <div class="modal-content fade">
+            <h1 class="modal-title">Login</h1>
+            <label for="modal-email">Email</label>
+            <input type="email" id="modal-email" name="modal-email">
+            <label for="modal-password">Password</label>
+            <input type="text" id="modal-password" name="modal-password">
+            <button type="button" id="modal-login-btn">Login</button>
+            <button type="button" id="close-login">Close</button>
+        </div>
+    </div>
    <div class="outer-wrapper">
         <div id="bg-img-wrapper">
             <img id="bg-img" src="sign-up-form-bg.jpg" alt="A blurry image of some flowers">
@@ -58,16 +69,17 @@
                                 minlength="8" maxlength="40" required> 
                             </div>
                         </div>
-                        <div id="email-validation-display"></div>
+                        <div id="email-validation-display"><strong
+                                class="highlighted">* </strong>Required Fields</div>
                         <div id="password-validation-display"></div>
                     </form>
                 </div>
                 <div class="login-wrapper">
                     <button id="create-account-btn" type="button">Create Account</button>
-                    <p>Already have an account? <a href="#">Log in</a></p>
+                    <p>Already have an account? <a href="#" id="open-login">Log in</a></p>
                 </div>
             </div>
         </div>
-   </div> 
+   </div>
 </body>
 </html>
