Feat: animated placeholders

--- a/index.html
+++ b/index.html
@@ -40,33 +40,34 @@
                             <div class="input-container">
                                 <label for="first-name">First Name</label>
                                 <input id="first-name" name="first-name" type="text"
-                                autocomplete="given-name">
+                                autocomplete="given-name" placeholder=" ">
                             </div> 
                             <div class="input-container">
                                 <label for="last-name">Last Name</label>
                                 <input id="last-name" name="last-name" type="text"
-                                autocomplete="family-name">
+                                autocomplete="family-name" placeholder=" ">
                             </div>
                             <div class="input-container">
                                 <label for="user-email">Email</label>
                                 <input id="user-email" name="user-email" type="email" 
-                                autocomplete="email" required>
+                                autocomplete="email" placeholder=" " required>
                             </div>
                             <div class="input-container">
                                 <label for="user-phone-no">Phone number</label>
-                                <input id="user-phone-no" name="user-phone-no" type="tel" autocomplete="tel">
+                                <input id="user-phone-no" name="user-phone-no" type="tel" 
+                                autocomplete="tel" placeholder=" ">
                             </div>
                             <div class="input-container">
                                 <label for="user-pass">Password</label>
                                 <input id="user-pass" name="user-pass" type="password"
                                 title="Password must be between 8-40 characters"
-                                minlength="8" maxlength="40" required>
+                                minlength="8" maxlength="40" placeholder=" " required>
                             </div>
                             <div class="input-container">
                                 <label for="user-pass-confirm">Confirm Password</label>
                                 <input id="user-pass-confirm" name="user-pass-confirm" type="password"
                                 title="Password must be between 8-40 characters"
-                                minlength="8" maxlength="40" required> 
+                                minlength="8" maxlength="40" placeholder=" " required> 
                             </div>
                         </div>
                         <div id="email-validation-display"><strong
