--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                         <div class="main-input-container">
                             <div class="input-container">
                                 <label for="first-name">First Name</label>
-                                <input id="first-name" name="first-name" type="text"
-                                autocomplete="given-name" placeholder=" ">
+                                <input id="first-name" name="first-name" type="text" autocomplete="given-name" placeholder=" ">
                             </div> 
                             <div class="input-container">
                                 <label for="last-name">Last Name</label>
