Added image folder

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
    <div class="outer-wrapper">
         <div id="bg-img-wrapper">
-            <img id="bg-img" src="sign-up-form-bg.jpg" alt="A blurry image of some flowers">
+            <img id="bg-img" src="./images/sign-up-form-bg.jpg" alt="A blurry image of some flowers">
         </div>
         <div class="outer-right-wrapper">
 
@@ -69,8 +69,7 @@
                                 minlength="8" maxlength="40" placeholder=" " required> 
                             </div>
                         </div>
-                        <div id="email-validation-display"><strong
-                                class="highlighted">* </strong>Required Fields</div>
+                        <div id="email-validation-display"><strong class="highlighted">* </strong>Required Fields</div>
                         <div id="password-validation-display"></div>
                     </form>
                 </div>
